# Aegis

./: .gitignore  README.md  pyproject.toml
aegis/: __init__.py  advisories.json  engine.py  knowledge.py  server.py  state.py
examples/: Cargo.toml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt  sample_app.py
tests/: test_contracts.py
