[project]
name = "aegis-python-sample"
version = "0.1.0"
dependencies = [
  "pyjwt>=2.3.0",
  "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
crypto = [
  "cryptography>=42.0.0",
]

[tool.poetry]
name = "aegis-python-sample"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
pycrypto = "2.6.1"

[tool.poetry.group.dev.dependencies]
pyjwt = "2.3.0"
